--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .axis path,
 .axis line {
     fill: none;
-    stroke: black;
+    stroke: #ddd;
     shape-rendering: crispEdges;
 }
 
@@ -10,6 +10,20 @@
     font-size: 11px;
 }
 
+line {
+stroke: #2ca02c;
+stroke-width: 2;
+fill: none;
+opacity: 0.8;
+}
+
 path {
-stroke: steelblue; stroke-width: 2; fill: none;
+stroke: steelblue;
+stroke-width: 2;
+fill: none;
+opacity: 0.8;
+}
+
+circle {
+  opacity: 0.8;
 }
