--- a/style.css
+++ b/style.css
@@ -1,29 +1,29 @@
-.axis path,
-.axis line {
+.axis path, .axis line {
     fill: none;
     stroke: #ddd;
     shape-rendering: crispEdges;
 }
-
 .axis text {
     font-family: sans-serif;
     font-size: 11px;
 }
-
+.legend {
+    font-size: 16px;
+    font-weight: bold;
+    text-anchor: start;
+}
 line {
-stroke: #2ca02c;
-stroke-width: 2;
-fill: none;
-opacity: 0.8;
+    stroke: #2ca02c;
+    stroke-width: 2;
+    fill: none;
+    opacity: 0.8;
 }
-
 path {
-stroke: steelblue;
-stroke-width: 2;
-fill: none;
-opacity: 0.8;
+    stroke: steelblue;
+    stroke-width: 2;
+    fill: none;
+    opacity: 0.8;
 }
-
 circle {
-  opacity: 0.8;
+    opacity: 0.8;
 }
