--- a/style.css
+++ b/style.css
@@ -31,3 +31,15 @@ path {
 circle {
     opacity: 0.6;
 }
+div.tooltip {
+    position: absolute;
+    text-align: center;
+    width: 60px;
+    height: 28px;
+    padding: 2px;
+    font: 12px sans-serif;
+    background: lightsteelblue;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
+}
