--- a/style.css
+++ b/style.css
@@ -34,11 +34,11 @@ circle {
 div.tooltip {
     position: absolute;
     text-align: center;
-    width: 60px;
-    height: 28px;
+    width: 160px;
+    height: 38px;
     padding: 2px;
     font: 12px sans-serif;
-    background: lightsteelblue;
+    background: white;
     border: 0px;
     border-radius: 8px;
     pointer-events: none;
